# mind_flex

./: .gitignore  README.md  games.json  wrangler-router.toml
artifacts/: Deployment_Report.md  Documentation_Conflict_Report.md  Implementation_Report.md  cloudflare-url-rewrites.md
backend/: Dockerfile.game  Dockerfile.profile  conftest.py  docker-compose.yml  pyproject.toml
backend/cloudflared/: config.example.yml
backend/db/init/: 01_schemas.sql  02_roles.sql  03_procedure.sql
backend/game_telemetry_service/app/: db.py  dependencies.py  main.py  schemas.py
backend/game_telemetry_service/app/routers/: games.py
backend/game_telemetry_service/app/services/: anti_cheat.py  scoring.py
backend/game_telemetry_service/tests/integration/: test_games_api.py
backend/game_telemetry_service/tests/unit/: test_anti_cheat.py  test_scoring.py
backend/nginx/: nginx.conf
backend/profile_service/app/: db.py  dependencies.py  main.py  schemas.py
backend/profile_service/app/routers/: profiles.py
backend/profile_service/app/services/: recovery_token.py  score_decay.py  streak.py
backend/profile_service/tests/integration/: test_profiles_api.py
backend/profile_service/tests/unit/: test_recovery_token.py  test_score_decay.py  test_streak.py
brain-hub-homepage/: cloudflare-router.js  index.html  package-lock.json  package.json  playwright.config.js  wrangler.toml
docs/: API_Spec.md  Acceptance-Criteria.md  Architecture.md  Constraints.md  Database.md  E2E-Test-Scenarios.md  Functional-Test-Cases.md  Game-Integration-Guide.md  Integration-Test-Cases.md  PRD.md  (+7 more)
(+36 files in other folders)
