[project]
name = "mindflex-backend"
version = "0.1.0"
description = "MindFlex backend services (profile-service + game-telemetry-service)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "python-dateutil>=2.9.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "faker>=25.0.0",
    "freezegun>=1.5.0",
    "anyio>=4.4.0",
]

[tool.setuptools.packages.find]
where = ["profile_service", "game_telemetry_service"] 

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["profile_service/tests", "game_telemetry_service/tests"] 
addopts = "-ra -q"
pythonpath = ["."] 

[tool.coverage.run]
source = ["profile_service.app", "game_telemetry_service.app"] 
